--- a/py_EH_Avro_deserialize_body.ipynb
+++ b/py_EH_Avro_deserialize_body.ipynb
@@ -812,9 +812,9 @@
         }
       },
       "source": [
-        "## Test 2. Use udf before wright data in ADLS\n",
+        "## Test 2. Use udf before write data in ADLS\n",
         "\n",
-        "In stread of deserialize body reading data that saved in ADLS, we can try to deserialize body right before written in ADLS"
+        "Instead of deserialize body reading data that saved in ADLS, we can try to deserialize body right before written in ADLS"
       ]
     },
     {
